# micro-tactics

./: .gitignore  CMakeLists.txt
include/mt/: actions.hpp  env.hpp  render.hpp  state.hpp  types.hpp
rl/: policy.hpp  policy_kernels.cu
src/: env.cpp  main_train.cpp  render.cpp
